--- a/vscodeSettings.json
+++ b/vscodeSettings.json
@@ -56,11 +56,6 @@
   "C_Cpp.vcFormat.newLine.closeBraceSameLine.emptyFunction": true,
   "C_Cpp.vcFormat.newLine.closeBraceSameLine.emptyType": true,
   "C_Cpp.vcFormat.newLine.scopeBracesOnSeparateLines": true,
-  "customizeUI.listRowHeight": 27,
-  "customizeUI.stylesheet": {
-    ".monaco-workbench .part > .content .folder-icon": "font-weight: bold;",
-    ".monaco-workbench .part.sidebar>.title>.title-label h2": "display: none;",
-  },
   "diffEditor.wordWrap": "on",
   "editor.accessibilitySupport": "off",
   "editor.bracketPairColorization.enabled": true,
@@ -71,9 +66,9 @@
   "editor.cursorSmoothCaretAnimation": true,
   "editor.defaultFormatter": "dbaeumer.vscode-eslint",
   "editor.foldingImportsByDefault": true,
-  "editor.fontFamily": "'BitstreamVeraSansMono NF','SourceCodePro NF','Cascadia Code', 'Courier New', monospace",
-  "editor.fontLigatures": true,
-  "editor.fontSize": 13,
+  "editor.fontFamily": "'Inconsolata NF','BitstreamVeraSansMono NF','SourceCodePro NF','Cascadia Code', 'Courier New', monospace",
+  "editor.fontLigatures": false,
+  "editor.fontSize": 15,
   "editor.fontWeight": 350,
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
@@ -113,7 +108,7 @@
           "bold": true
         },
         "property": {
-          "foreground": "#43b6b9",
+          "foreground": "#98C379",
           "italic": true
         },
         "type": {
@@ -272,45 +267,45 @@
   "workbench.activityBar.visible": false,
   "workbench.colorTheme": "One Monokai",
   "workbench.colorCustomizations": {
-    "activityBar.background": "#181819",
-    "editor.background": "#181819",
-    "editor.lineHighlightBackground": "#181819",
-    "editor.lineHighlightBorder": "#333333",
+    "activityBar.background": "#282C34",
+    "editor.background": "#282C34",
+    "editor.lineHighlightBackground": "#282C34",
+    "editor.lineHighlightBorder": "#3f3f3f",
     "editor.selectionBackground": "#3E4451",
-    "editor.selectionHighlightBackground": "#333333",
+    "editor.selectionHighlightBackground": "#3f3f3f",
     "editorBracketHighlight.foreground1": "#c172d9",
     "editorBracketHighlight.foreground2": "#5caeef",
     "editorBracketHighlight.foreground3": "#dfb976",
     "editorCursor.foreground": "#3178C6",
-    "editorGroup.emptyBackground": "#181819",
-    "editorGroupHeader.tabsBackground": "#202022",
-    "editorHoverWidget.background": "#202022",
-    "editorSuggestWidget.background": "#202022",
-    "editorSuggestWidget.selectedBackground": "#333333",
-    "input.background": "#181819",
-    "list.activeSelectionBackground": "#181819",
+    "editorGroup.emptyBackground": "#282C34",
+    "editorGroupHeader.tabsBackground": "#21252b",
+    "editorHoverWidget.background": "#21252b",
+    "editorSuggestWidget.background": "#21252b",
+    "editorSuggestWidget.selectedBackground": "#3f3f3f",
+    "input.background": "#282C34",
+    "list.activeSelectionBackground": "#282C34",
     "list.activeSelectionForeground": "#b8b6b6",
-    "list.focusBackground": "#181819",
-    "list.focusOutline": "#333333",
-    "list.inactiveSelectionBackground": "#181819",
+    "list.focusBackground": "#282C34",
+    "list.focusOutline": "#3f3f3f",
+    "list.inactiveSelectionBackground": "#282C34",
     "list.inactiveSelectionForeground": "#b8b6b6",
-    "menu.background": "#202022",
-    "menu.selectionBackground": "#333333",
-    "quickInput.background": "#202022",
-    "quickInputList.focusBackground": "#333333",
-    "scrollbarSlider.background": "#202022",
-    "sideBar.background": "#181819",
-    "sideBar.border": "#181819",
-    "statusBar.background": "#181819",
-    "tab.activeBackground": "#181819",
-    "tab.border": "#202022",
-    "tab.inactiveBackground": "#202022",
+    "menu.background": "#21252b",
+    "menu.selectionBackground": "#3f3f3f",
+    "quickInput.background": "#21252b",
+    "quickInputList.focusBackground": "#3f3f3f",
+    "scrollbarSlider.background": "#21252b",
+    "sideBar.background": "#282C34",
+    "sideBar.border": "#282C34",
+    "statusBar.background": "#282C34",
+    "tab.activeBackground": "#282C34",
+    "tab.border": "#21252b",
+    "tab.inactiveBackground": "#21252b",
     "tab.inactiveForeground": "#b8b6b6",
-    "terminal.background": "#181819",
+    "terminal.background": "#282C34",
     "terminalCursor.foreground": "#3178C6",
-    "titleBar.activeBackground": "#202022",
-    "titleBar.inactiveBackground": "#202022",
-    "toolbar.activeBackground": "#181819",
+    "titleBar.activeBackground": "#21252b",
+    "titleBar.inactiveBackground": "#21252b",
+    "toolbar.activeBackground": "#282C34",
     "tree.indentGuidesStroke": "#3E4451",
   },
   "workbench.editor.enablePreview": false,
@@ -318,11 +313,12 @@
   "workbench.editorAssociations": {
     "*.pdf": "latex-workshop-pdf-hook"
   },
-  "workbench.iconTheme": "moxer-icons",
+  "workbench.iconTheme": "material-icon-theme",
   "workbench.list.smoothScrolling": true,
   "workbench.startupEditor": "none",
   "workbench.statusBar.visible": false,
   "workbench.tree.renderIndentGuides": "always",
   "zenMode.hideLineNumbers": false,
   "zenMode.hideTabs": false,
+  "typescript.updateImportsOnFileMove.enabled": "always",
 }
